Optimize native calls and add small-function inlining
- normalize narrow native returns and restore agent-less JVMCI initialization
- inline eligible small x86-64 native functions with a verified fallback path
- add correctness batteries, native fixtures, diagnostics, benchmarks, and documentation